# hexis

./: .gitignore  README.md  pyproject.toml
cua_sl/: __init__.py
cua_sl/data/: registry.py  trajectory_store.py
cua_sl/model/: backbone.py  expert_head.py  policy.py  router.py
cua_sl/self_improve/: harness.py  improvement_loop.py  labeler.py  pattern_detector.py
cua_sl/teacher/: loop.py  tools.py  trajectory_logger.py
cua_sl/training/: rl.py  router_sft.py  sft.py
hexis/: __init__.py  __main__.py
hexis/data/: registry.py  schemas.py  trajectory_store.py
hexis/harness/: page.py  ssim.py
hexis/model/: policy.py  router.py
hexis/self_improve/: harness.py  improvement_loop.py
hexis/teacher/: loop.py  stuck.py  tools.py  window.py
hexis/training/: rl.py  rl_cli.py  router_sft.py  sft.py  sft_cli.py
hexis/util/: image.py
scripts/: run_teacher.py  status.py  train_expert_rl.py  train_expert_sft.py  train_router.py
tests/: test_expert_head.py  test_pattern_detector.py  test_router.py  test_trajectory_store.py
